--- a/web/index.html
+++ b/web/index.html
@@ -40,5 +40,9 @@
 </head>
 <body>
   <script src="flutter_bootstrap.js" async></script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/pdf.js/2.11.338/pdf.min.js"></script>
+  <script type="text/javascript">
+    pdfjsLib.GlobalWorkerOptions.workerSrc = "//cdnjs.cloudflare.com/ajax/libs/pdf.js/2.11.338/pdf.worker.min.js";
+ </script>
 </body>
 </html>
