--- a/web/index.html
+++ b/web/index.html
@@ -1,33 +1,26 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <base href="$FLUTTER_BASE_HREF">
+
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-  <meta name="description" content="An example of the syncfusion_flutter_pdfviewer on the web platform.">
+  <meta name="description" content="A new Flutter project.">
 
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="example">
+  <meta name="apple-mobile-web-app-title" content="jamesmoreau.github.io">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
   <!-- Favicon -->
   <link rel="shortcut icon" type="image/png" href="favicon.png"/>
 
-  <title>example</title>
+  <title>jamesmoreau.github.io</title>
   <link rel="manifest" href="manifest.json">
 </head>
-<body oncontextmenu="return false;">
-  <!-- This script installs service_worker.js to provide PWA functionality to
-       application. For more information, see:
-       https://developers.google.com/web/fundamentals/primers/service-workers -->
-  <script>
-    if ('serviceWorker' in navigator) {
-      window.addEventListener('load', function () {
-        navigator.serviceWorker.register('flutter_service_worker.js');
-      });
-    }
-  </script>
+<body>
+  <!-- <script src="flutter_bootstrap.js" async></script> --> <!-- This breaks the pdfjsLib for some reason -->
   <!-- This script installs pdf.min.js to render the PDF page as an image in the 
   application and load in syncfusion_flutter_pdfviewer widget -->
   <script src="//cdnjs.cloudflare.com/ajax/libs/pdf.js/2.11.338/pdf.min.js"></script>
